<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!--
	    重要： 此部分与滑动控件中的菜单部分相同，
	    当控件中的菜单为隐藏状态是，
	    默认显示此布局 注：此布局中按钮不能有ID
	    (当使用平滑状态时可以将此部分省略)
    -->

  

    <!-- 支持滑动的控件 -->

    <com.example.myslidingmenu2.view.MySlidingMenuView
        android:id="@+id/sliding_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
  <!-- 菜单项 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="15dp" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu3" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu5" />
        </LinearLayout>
       

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- 内容体 -->

            <include
                android:id="@+id/myActivity1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tab_activity1" />

            <include
                android:id="@+id/myActivity2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tab_activity2" />

            <include
                android:id="@+id/myActivity3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tab_activity3" />

            <include
                android:id="@+id/myActivity4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tab_activity4" />

            <include
                android:id="@+id/myActivity5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tab_activity5" />
        </LinearLayout>
       
    </com.example.myslidingmenu2.view.MySlidingMenuView>

</RelativeLayout>